--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #Eureka Client
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-#eureka.instance.preferIpAddress=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.preferIpAddress=true
 
 #Circuit Breaker Config
 resilience4j.circuitbreaker.instances.CircuitBreakerService.failure-rate-threshold=50
